--- a/index.html
+++ b/index.html
@@ -22,22 +22,20 @@
         header {
             background-color: rgba(0, 0, 0, 0.5);
             padding: 10px;
-            display: flex;
-            align-items: center;
             color: #fff;
         }
 
         h1 {
             margin: 0;
             font-size: 1.5em;
-            flex: 1;
         }
 
         nav {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             background-color: #333;
             padding: 10px;
+            align-items: center;
         }
 
         nav a {
@@ -74,10 +72,10 @@
     </header>
 
     <nav>
+        <!-- Add your navigation links here -->
         <a href="#home">Home</a>
         <a href="#games">Games</a>
         <a href="#about">About</a>
-        <!-- Add more navigation links as needed -->
     </nav>
 
     <main>
