--- a/index.html
+++ b/index.html
@@ -104,33 +104,35 @@
 
     <!-- Firebase Initialization -->
     <script>
+    const firebaseConfig = {
+        apiKey: "AIzaSyDSDZLKas3k6Y3HEdhMBT7KSaP7g-pwwoc",
+        authDomain: "database-13806.firebaseapp.com",
+        projectId: "database-13806",
+        storageBucket: "database-13806.appspot.com",
+        messagingSenderId: "143871505578",
+        appId: "1:143871505578:web:8ac3cee27ea7cbc7680cd3",
+        measurementId: "G-XPPK82TVK4"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+
+    // Initialize the FirebaseUI Widget using Firebase.
+    const ui = new firebaseui.auth.AuthUI(firebase.auth());
+
+    function showAuthUI() {
+        ui.start('#firebaseui-auth-container', {
+            signInSuccessUrl: '/',
+            signInOptions: [
+                firebase.auth.EmailAuthProvider.PROVIDER_ID,
+                firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+                // Add more providers as needed
+            ],
+            tosUrl: '<your-tos-url>',
+        });
+    }
+
     document.addEventListener("DOMContentLoaded", function () {
-        const firebaseConfig = {
-            apiKey: "AIzaSyDSDZLKas3k6Y3HEdhMBT7KSaP7g-pwwoc",
-            authDomain: "database-13806.firebaseapp.com",
-            projectId: "database-13806",
-            storageBucket: "database-13806.appspot.com",
-            messagingSenderId: "143871505578",
-            appId: "1:143871505578:web:8ac3cee27ea7cbc7680cd3",
-            measurementId: "G-XPPK82TVK4"
-        };
-
-        firebase.initializeApp(firebaseConfig);
-
-        // Initialize the FirebaseUI Widget using Firebase.
-        const ui = new firebaseui.auth.AuthUI(firebase.auth());
-
-        window.showAuthUI = function () {
-            ui.start('#firebaseui-auth-container', {
-                signInSuccessUrl: '/',
-                signInOptions: [
-                    firebase.auth.EmailAuthProvider.PROVIDER_ID,
-                    firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-                    // Add more providers as needed
-                ],
-                tosUrl: '<your-tos-url>',
-            });
-        };
+        window.showAuthUI = showAuthUI;
     });
 </script>
 </body>
