--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 
     <!-- Firebase Scripts -->
     <script src="https://www.gstatic.com/firebasejs/9.3.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.3.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.3.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/9.3.0/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/9.3.0/firebase-ui-auth.css" />
+<script src="https://www.gstatic.com/firebasejs/9.3.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.3.0/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/ui/9.3.0/firebase-ui-auth.js"></script>
+<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/9.3.0/firebase-ui-auth.css" />
 </head>
 
 <body>
@@ -119,20 +119,18 @@
     // Initialize the FirebaseUI Widget using Firebase.
     const ui = new firebaseui.auth.AuthUI(firebase.auth());
 
-    function showAuthUI() {
-        ui.start('#firebaseui-auth-container', {
-            signInSuccessUrl: '/',
-            signInOptions: [
-                firebase.auth.EmailAuthProvider.PROVIDER_ID,
-                firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-                // Add more providers as needed
-            ],
-            tosUrl: '<your-tos-url>',
-        });
-    }
-
     document.addEventListener("DOMContentLoaded", function () {
-        window.showAuthUI = showAuthUI;
+        window.showAuthUI = function () {
+            ui.start('#firebaseui-auth-container', {
+                signInSuccessUrl: '/',
+                signInOptions: [
+                    firebase.auth.EmailAuthProvider.PROVIDER_ID,
+                    firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+                    // Add more providers as needed
+                ],
+                tosUrl: '<your-tos-url>',
+            });
+        };
     });
 </script>
 </body>
