--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         .auth-buttons {
             display: flex;
             align-items: center;
+            margin-right: 10px; /* Add margin to separate from navigation links */
         }
 
         .auth-button {
@@ -55,7 +56,6 @@
             background-color: #333;
             border: none;
             padding: 10px 20px;
-            margin: 0 10px;
             border-radius: 5px;
             cursor: pointer;
         }
