--- a/index.html
+++ b/index.html
@@ -1,99 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Development</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Arial', sans-serif;
-            background-image: url('your-custom-background-image.jpg'); /* Replace with the path to your background image */
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-
-        nav {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            background-color: #333;
-            padding: 10px;
-        }
-
-        h1 {
-            margin: 0;
-            font-size: 1.5em;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 20px;
-            margin: 0 10px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        nav a:hover {
-            background-color: #555;
-        }
-
-        .auth-buttons {
-            display: flex;
-            align-items: center;
-            margin-right: 10px; /* Add margin to separate from navigation links */
-        }
-
-        .auth-button {
-            color: #fff;
-            background-color: #333;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .auth-button:hover {
-            background-color: #555;
-        }
-
-        main {
-            text-align: center;
-            color: #fff;
-            margin: 20px;
-        }
-    </style>
+    <title>Chatbot</title>
 </head>
-
 <body>
-    <nav>
-        <h1>Game Development</h1>
-        <div>
-            <a href="#home">Home</a>
-            <a href="#games">Games</a>
-            <a href="#about">About</a>
-            <!-- Add more navigation links as needed -->
-        </div>
-
-        <div class="auth-buttons">
-            <!-- Button for Register/Login (remove this if not needed) -->
-            <!-- <button class="auth-button" onclick="showAuthUI()">Register/Login</button> -->
-        </div>
-    </nav>
-
-    <main>
-        <h2>Welcome to our Game Development World!</h2>
-        <p>Explore the latest games and discover the magic behind game development.</p>
-        <!-- Remove the following div if Firebase is not used -->
-        <div id="firebaseui-auth-container"></div>
-    </main>
+    <div id="chat-container">
+        <div id="chat-display"></div>
+        <input type="text" id="user-input" placeholder="Type your message...">
+        <button onclick="sendMessage()">Send</button>
+    </div>
+    <script src="script.js"></script>
 </body>
-
 </html>
