--- a/index.html
+++ b/index.html
@@ -4,79 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
-    <script src="https://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha256.js"></script>
+    <!-- Include CryptoJS library from the new CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
     <style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-    }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
 
-    header {
-        background: #333;
-        color: white;
-        padding: 15px;
-        text-align: center;
-    }
+        header {
+            background: #333;
+            color: white;
+            padding: 15px;
+            text-align: center;
+        }
 
-    nav {
-        background: #555;
-        color: white;
-        padding: 10px;
-    }
+        nav {
+            background: #555;
+            color: white;
+            padding: 10px;
+        }
 
-    nav a {
-        color: white;
-        text-decoration: none;
-        padding: 10px;
-        margin: 0 10px;
-        border-radius: 5px;
-        transition: background-color 0.3s ease;
-    }
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px;
+            margin: 0 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
 
-    nav a:hover {
-        background-color: #777;
-    }
+        nav a:hover {
+            background-color: #777;
+        }
 
-    main {
-        padding: 20px;
-    }
+        main {
+            padding: 20px;
+        }
 
-    h2 {
-        color: #333;
-    }
+        h2 {
+            color: #333;
+        }
 
-    /* Example styles for a form */
-    form {
-        max-width: 400px;
-        margin: 0 auto;
-    }
+        /* Example styles for a form */
+        form {
+            max-width: 400px;
+            margin: 0 auto;
+        }
 
-    label {
-        display: block;
-        margin-bottom: 5px;
-    }
+        label {
+            display: block;
+            margin-bottom: 5px;
+        }
 
-    input {
-        width: 100%;
-        padding: 8px;
-        margin-bottom: 10px;
-        box-sizing: border-box;
-    }
+        input {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+        }
 
-    button {
-        background-color: #555;
-        color: white;
-        padding: 10px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
+        button {
+            background-color: #555;
+            color: white;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
 
-    button:hover {
-        background-color: #777;
-    }
-</style>
+        button:hover {
+            background-color: #777;
+        }
+    </style>
 </head>
 <body>
     <header>
