--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
             padding: 0;
         }
 
-        header {
-            background: #333;
-            color: white;
-            padding: 15px;
-            text-align: center;
-        }
-
         nav {
             background: #555;
             color: white;
@@ -80,9 +73,9 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>Admin Panel</h1>
-    </header>
+    <!-- <header>
+        <h1>Admin Panel Header</h1>
+    </header> -->
 
     <nav>
         <a href="#">Dashboard</a>
@@ -108,24 +101,24 @@
 
     <script src="adminAcc.js"></script>
     <script>
-    function login() {
-        const username = document.getElementById('username').value;
-        const password = document.getElementById('password').value;
+        function login() {
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
 
-        // Find the account by username
-        const account = accounts.find(acc => acc.username === username);
+            // Find the account by username
+            const account = accounts.find(acc => acc.username === username);
 
-        if (account) {
-            // Compare plain text passwords
-            if (password === account.password) {
-                alert(`Welcome, ${account.username}!`);
+            if (account) {
+                // Compare plain text passwords
+                if (password === account.password) {
+                    alert(`Welcome, ${account.username}!`);
+                } else {
+                    alert('Invalid credentials. Please try again.');
+                }
             } else {
                 alert('Invalid credentials. Please try again.');
             }
-        } else {
-            alert('Invalid credentials. Please try again.');
         }
-    }
-</script>
+    </script>
 </body>
 </html>
