--- a/index.html
+++ b/index.html
@@ -3,151 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Panel</title>
-    <!-- Include CryptoJS library from the new CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        nav {
-            background: #555;
-            color: white;
-            padding: 10px;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px;
-            margin: 0 10px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        nav a:hover {
-            background-color: #777;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        h2 {
-            color: #333;
-        }
-
-        /* Example styles for a form */
-        form {
-            max-width: 400px;
-            margin: 0 auto;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        input {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-        }
-
-        button {
-            background-color: #555;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #777;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        .dashboard-item {
-            margin-bottom: 10px;
-        }
-    </style>
+    <title>Game Development</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav id="nav">
-        <a href="#" id="dashboardLink" class="hidden">Dashboard</a>
-        <a href="#" id="usersLink" class="hidden">Users</a>
-        <a href="#" id="settingsLink" class="hidden">Settings</a>
-        <!-- Add more links as needed -->
+    <nav>
+        <div>
+            <a href="https://jjsal1234.github.io/Coolsite/">Home</a>
+            <a href="https://jjsal1234.github.io/Coolsite/games">Games</a>
+            <a href="https://jjsal1234.github.io/Coolsite/sites">Other Sites</a>
+            <button id="leaderboardButton" onclick="openLeaderboardPopup()">Leaderboard</button>
+        </div>
+        <img src="https://cdn.discordapp.com/attachments/1061160749524860949/1176278993683619990/ei_1700517095364-removebg-preview.png?ex=656e4a2e&is=655bd52e&hm=91dfd7c21d00cb1e75004c8c83b00496209f3f277b0d017eeacf5b05659913a1&" alt="Logo">
+        <span id="profileText" style="color: white; margin-right: 10px;"></span>
+        <button id="signInButton" onclick="openSignInPopup()">Sign In</button>
+        <button id="profileButton" style="display:none;" onclick="openProfilePopup()">Profile</button>
     </nav>
 
-    <main id="main">
-        <h2 id="dashboardTitle" class="hidden">Dashboard</h2>
+    <div class="container">
+        <h1>Welcome to our Game Development Website!</h1>
+        <p>Explore the world of game development with us.</p>
+    </div>
 
-        <!-- Example form in the admin panel -->
-        <form id="loginForm">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-
-            <button type="button" onclick="login()">Login</button>
-        </form>
-
-        <div id="dashboardContent" class="hidden">
-            <div class="dashboard-item"><a href="#">Item 1</a></div>
-            <div class="dashboard-item"><a href="#">Item 2</a></div>
-            <div class="dashboard-item"><a href="#">Item 3</a></div>
-            <div class="dashboard-item"><a href="#">Item 4</a></div>
-            <div class="dashboard-item"><a href="#">Item 5</a></div>
-            <div class="dashboard-item"><a href="#">Item 6</a></div>
-            <div class="dashboard-item"><a href="#">Item 7</a></div>
-            <div class="dashboard-item"><a href="#">Item 8</a></div>
-            <div class="dashboard-item"><a href="#">Item 9</a></div>
-            <div class="dashboard-item"><a href="#">Item 10</a></div>
-            <div class="dashboard-item"><a href="#">Item 11</a></div>
-            <div class="dashboard-item"><a href="#">Item 12</a></div>
+    <!-- Leaderboard Popup -->
+    <div id="leaderboardPopup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closeLeaderboardPopup()">&times;</span>
+            <h2 style="font-size: 24px;">Leaderboard</h2>
+            <ul id="leaderboardList" style="font-size: 18px;"></ul>
         </div>
-    </main>
+    </div>
 
-    <script src="adminAcc.js"></script>
-    <script>
-        function login() {
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
+    <!-- Sign-in Popup -->
+    <div id="signInPopup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closeSignInPopup()">&times;</span>
+            <h2>Sign In</h2>
+            <label for="username">Username:</label>
+            <input type="text" id="username" placeholder="Enter your username">
+            <button onclick="signIn()">Sign In</button>
+        </div>
+    </div>
 
-            // Find the account by username
-            const account = accounts.find(acc => acc.username === username);
+    <!-- Profile Popup -->
+    <div id="profilePopup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closeProfilePopup()">&times;</span>
+            <h2>Profile</h2>
+            <p id="profileInfo">Username: <span id="profileUsername"></span><br>Verified: <span id="profileVerified"></span></p>
+            <button onclick="signOut()">Sign Out</button>
+        </div>
+    </div>
 
-            if (account) {
-                // Compare plain text passwords
-                if (password === account.password) {
-                    // Hide the login form
-                    document.getElementById('loginForm').classList.add('hidden');
-
-                    // Show the navigation links and dashboard content
-                    document.getElementById('dashboardLink').classList.remove('hidden');
-                    document.getElementById('usersLink').classList.remove('hidden');
-                    document.getElementById('settingsLink').classList.remove('hidden');
-                    document.getElementById('dashboardTitle').classList.remove('hidden');
-                    document.getElementById('dashboardContent').classList.remove('hidden');
-
-                    alert(`Welcome, ${account.username}!`);
-                } else {
-                    alert('Invalid credentials. Please try again.');
-                }
-            } else {
-                alert('Invalid credentials. Please try again.');
-            }
-        }
-    </script>
+    <script src="accounts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
