--- a/index.html
+++ b/index.html
@@ -3,59 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Development</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Login and Register</title>
 </head>
 <body>
-    <nav>
-        <div>
-            <a href="https://jjsal1234.github.io/Coolsite/">Home</a>
-            <a href="https://jjsal1234.github.io/Coolsite/games">Games</a>
-            <a href="https://jjsal1234.github.io/Coolsite/sites">Other Sites</a>
-            <button id="leaderboardButton" onclick="openLeaderboardPopup()">Leaderboard</button>
-        </div>
-        <img src="https://cdn.discordapp.com/attachments/1061160749524860949/1176278993683619990/ei_1700517095364-removebg-preview.png?ex=656e4a2e&is=655bd52e&hm=91dfd7c21d00cb1e75004c8c83b00496209f3f277b0d017eeacf5b05659913a1&" alt="Logo">
-        <span id="profileText" style="color: white; margin-right: 10px;"></span>
-        <button id="signInButton" onclick="openSignInPopup()">Sign In</button>
-        <button id="profileButton" style="display:none;" onclick="openProfilePopup()">Profile</button>
-    </nav>
-
     <div class="container">
-        <h1>Welcome to our Game Development Website!</h1>
-        <p>Explore the world of game development with us.</p>
+        <form id="loginForm">
+            <h2>Login</h2>
+            <label for="loginUsername">Username:</label>
+            <input type="text" id="loginUsername" required>
+            <label for="loginPassword">Password:</label>
+            <input type="password" id="loginPassword" required>
+            <button type="button" onclick="login()">Login</button>
+        </form>
+        <form id="registerForm">
+            <h2>Register</h2>
+            <label for="registerUsername">Username:</label>
+            <input type="text" id="registerUsername" required>
+            <label for="registerPassword">Password:</label>
+            <input type="password" id="registerPassword" required>
+            <button type="button" onclick="register()">Register</button>
+        </form>
     </div>
-
-    <!-- Leaderboard Popup -->
-    <div id="leaderboardPopup" class="popup">
-        <div class="popup-content">
-            <span class="close" onclick="closeLeaderboardPopup()">&times;</span>
-            <h2 style="font-size: 24px;">Leaderboard</h2>
-            <ul id="leaderboardList" style="font-size: 18px;"></ul>
-        </div>
-    </div>
-
-    <!-- Sign-in Popup -->
-    <div id="signInPopup" class="popup">
-        <div class="popup-content">
-            <span class="close" onclick="closeSignInPopup()">&times;</span>
-            <h2>Sign In</h2>
-            <label for="username">Username:</label>
-            <input type="text" id="username" placeholder="Enter your username">
-            <button onclick="signIn()">Sign In</button>
-        </div>
-    </div>
-
-    <!-- Profile Popup -->
-    <div id="profilePopup" class="popup">
-        <div class="popup-content">
-            <span class="close" onclick="closeProfilePopup()">&times;</span>
-            <h2>Profile</h2>
-            <p id="profileInfo">Username: <span id="profileUsername"></span><br>Verified: <span id="profileVerified"></span></p>
-            <button onclick="signOut()">Sign Out</button>
-        </div>
-    </div>
-
-    <script src="accounts.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
