--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <form id="loginForm">
-            <h2>Login</h2>
-            <label for="loginUsername">Username:</label>
-            <input type="text" id="loginUsername" required>
-            <label for="loginPassword">Password:</label>
-            <input type="password" id="loginPassword" required>
-            <button type="button" onclick="login()">Login</button>
-        </form>
-        <form id="registerForm">
+        <form id="registerForm" class="left-form">
             <h2>Register</h2>
             <label for="registerUsername">Username:</label>
             <input type="text" id="registerUsername" required>
@@ -24,7 +16,15 @@
             <input type="password" id="registerPassword" required>
             <button type="button" onclick="register()">Register</button>
         </form>
+        <form id="loginForm" class="right-form">
+            <h2>Login</h2>
+            <label for="loginUsername">Username:</label>
+            <input type="text" id="loginUsername" required>
+            <label for="loginPassword">Password:</label>
+            <input type="password" id="loginPassword" required>
+            <button type="button" onclick="login()">Login</button>
+        </form>
     </div>
-    <script src="script.js"></script>
+    <script src="https://jjsal1234.github.io/account-test/api/71adhd78.js"></script>
 </body>
 </html>
