--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 </head>
 <body>
     <div class="container">
-        <form id="registerForm" class="left-form">
+        <div class="left-section">
             <h2>Register</h2>
             <label for="registerUsername">Username:</label>
             <input type="text" id="registerUsername" required>
             <label for="registerPassword">Password:</label>
             <input type="password" id="registerPassword" required>
             <button type="button" onclick="register()">Register</button>
-        </form>
-        <form id="loginForm" class="right-form">
+        </div>
+        <div class="right-section">
             <h2>Login</h2>
             <label for="loginUsername">Username:</label>
             <input type="text" id="loginUsername" required>
             <label for="loginPassword">Password:</label>
             <input type="password" id="loginPassword" required>
             <button type="button" onclick="login()">Login</button>
-        </form>
+        </div>
     </div>
     <script src="https://jjsal1234.github.io/account-test/api/71adhd78.js"></script>
 </body>
