--- a/index.html
+++ b/index.html
@@ -1,30 +1,18 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Dev Site</title>
-    <script src="script.js"></script>
+    <title>Redirect Button</title>
 </head>
 <body>
-    <h1>Welcome to the Game Dev Site</h1>
+    <button onclick="redirectToCoolSite()">Go to Cool Site</button>
 
-    <!-- Registration Form -->
-    <h2>Register</h2>
-    <form id="registerForm">
-        Username: <input type="text" id="registerUsername" required><br>
-        Password: <input type="password" id="registerPassword" required><br>
-        <button type="button" onclick="register()">Register</button>
-    </form>
-
-    <!-- Login Form -->
-    <h2>Login</h2>
-    <form id="loginForm">
-        Username: <input type="text" id="loginUsername" required><br>
-        Password: <input type="password" id="loginPassword" required><br>
-        <button type="button" onclick="login()">Login</button>
-    </form>
-
+    <script>
+        // Function to redirect to the specified URL
+        function redirectToCoolSite() {
+            window.location.href = "https://c00lsite.000webhostapp.com/";
+        }
+    </script>
 </body>
 </html>
